--- a/src/html/others/privacy.html
+++ b/src/html/others/privacy.html
@@ -31,7 +31,7 @@
                 <div class="flex items-center">
                     <div class="flex-shrink-0 flex items-center">
                         <div class="flex items-center justify-center">
-                            <a href="/task-manager-fe/index.html">
+                            <a href="/index.html">
                             <img src="../../../Assets/logo.svg" alt="taskhive-logo">
                         </div>
                         <span class="ml-2 text-2xl font-bold text-primary">TaskHive</span></a>
@@ -192,7 +192,7 @@
                 <div>
                     <div class="flex items-center mb-4">
                         <div class="flex items-center justify-center">
-                            <a href="landingpage.html">
+                            <a href="/index.html">
                                 <img src="../../../Assets/logo.svg" alt="taskhive-logo">
                         </div>
                         <span class="ml-2 text-xl font-bold">TaskHive</span></a>
